[package]
name = "rust_lib_bluetooth_gnss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
kampu = "0.1.11"
once_cell = "1.20.0"
serde_json = "1.0.109"
jni = "0.8.1"
lazy_static = "1.5.0"
nmea = { version = "0.7.0", features = ["serde"] }
nmea-parser = "0.11.0"
nmea-0183 = "0.0.5"
anyhow = "1.0.89"
