[package]
name = "rust_lib_bluetooth_gnss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
binrw = "0.14"
serde_json = "1.0.109"
nmea = { version = "0.7.0", features = ["serde"] }
anyhow = "1.0.89"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.8.1"
