[package]
name = "rust_lib_bluetooth_gnss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["native"]
native = ["dep:flutter_rust_bridge", "dep:jni"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
flutter_rust_bridge = { version = "=2.11.1", optional = true }
binrw = "0.14"
serde_json = "1.0.109"
jni = { version = "0.8.1", optional = true }
nmea = { version = "0.7.0", features = ["serde"] }
anyhow = "1.0.89"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }